Fixes/NSGsForPublicAccess.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.34.1.11899",
      "templateHash": "11079031298075141921"
    }
  },
  "variables": {
    "vnet1NsgName": "VNET1-nsgVMSubnet",
    "vnet2NsgName": "VNET2-nsgVMSubnet"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2021-02-01",
      "name": "[format('{0}/{1}', variables('vnet1NsgName'), 'CORPNET-SSH-RDP-1')]",
      "properties": {
        "priority": 150,
        "direction": "Inbound",
        "access": "Allow",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "CorpNetSaw",
        "destinationAddressPrefix": "*"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2021-02-01",
      "name": "[format('{0}/{1}', variables('vnet1NsgName'), 'CORPNET-SSH-RDP-2')]",
      "properties": {
        "priority": 160,
        "direction": "Inbound",
        "access": "Allow",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "CorpNetPublic",
        "destinationAddressPrefix": "*"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2021-02-01",
      "name": "[format('{0}/{1}', variables('vnet2NsgName'), 'CORPNET-SSH-RDP-1')]",
      "properties": {
        "priority": 150,
        "direction": "Inbound",
        "access": "Allow",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "CorpNetSaw",
        "destinationAddressPrefix": "*"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2021-02-01",
      "name": "[format('{0}/{1}', variables('vnet2NsgName'), 'CORPNET-SSH-RDP-2')]",
      "properties": {
        "priority": 160,
        "direction": "Inbound",
        "access": "Allow",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "CorpnetPublic",
        "destinationAddressPrefix": "*"
      }
    }
  ]
}
